5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4485/executions/1573_1331.log
== TEST (2019-03-29 18:04:31) 
-- CODE:
()
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:04:45) 
-- CODE:
print(50%3)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:05:50) 
-- CODE:
print(50%3)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 18:05:53) 
-- CODE:
print(50%3)
-- EXECUTION TIME:
0.22925
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:06:54) 
-- CODE:
(50//3)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:07:24) 
-- CODE:
(50//3)
50%3
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:07:33) 
-- CODE:
(50//3)
50%3
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 18:07:34) 
-- CODE:
(50//3)
50%3
-- EXECUTION TIME:
0.193064
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:08:06) 
-- CODE:
(50//3)
50%3
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:08:26) 
-- CODE:
(50//3)
50%3
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:11:40) 
-- CODE:
(50//3)

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:11:49) 
-- CODE:
50//3

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:12:05) 
-- CODE:
print("klkl")

-- OUTPUT:
klkl
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:13:06) 
-- CODE:
(50//3)
50%3
-- OUTPUT:
klkl
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:13:08) 
-- CODE:
(50//3)
50%3
-- OUTPUT:
klkl
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 18:13:08) 
-- CODE:
(50//3)
50%3
-- EXECUTION TIME:
0.109443
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:13:16) 
-- CODE:
(50//3)
50%3
-- OUTPUT:
klkl
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:17:50) 
-- CODE:
50//3(=)

-- ERROR:
File "XXXX", line 1
    50//3(=)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:18:08) 
-- CODE:
50//3(=21)

-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:20:31) 
-- CODE:
7 // 2
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:22:58) 
-- CODE:
7 // 2
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:23:00) 
-- CODE:
7 // 2
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:23:01) 
-- CODE:
7 // 2
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:23:17) 
-- CODE:
(7 // 2)
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 19:23:18) 
-- CODE:
(7 // 2)
-- EXECUTION TIME:
0.146202
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:23:27) 
-- CODE:
(7//2)
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:24:07) 
-- CODE:
(50//3)
50%3
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:24:09) 
-- CODE:
(50//3)
50%3
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:24:10) 
-- CODE:
(50//3)
50%3
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:24:10) 
-- CODE:
(50//3)
50%3
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:24:10) 
-- CODE:
(50//3)
50%3
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:24:11) 
-- CODE:
(50//3)
50%3
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:24:11) 
-- CODE:
(50//3)
50%3
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:24:12) 
-- CODE:
(50//3)
50%3
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:24:12) 
-- CODE:
(50//3)
50%3
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:24:12) 
-- CODE:
(50//3)
50%3
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:24:13) 
-- CODE:
(50//3)
50%3
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:24:21) 
-- CODE:
(50//3)
50%3
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:24:21) 
-- CODE:
(50//3)
50%3
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:24:21) 
-- CODE:
(50//3)
50%3
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 19:24:31) 
-- CODE:
(50//3)
50%3
-- EXECUTION TIME:
0.171544
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:24:31) 
-- CODE:
(50//3)
50%3
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:26:11) 
-- CODE:
(50//3)
50%3
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:26:13) 
-- CODE:
(50//3)
50%3
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:26:14) 
-- CODE:
(50//3)
50%3
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:26:14) 
-- CODE:
(50//3)
50%3
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:26:14) 
-- CODE:
(50//3)
50%3
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:26:14) 
-- CODE:
(50//3)
50%3
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:26:15) 
-- CODE:
(50//3)
50%3
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:26:15) 
-- CODE:
(50//3)
50%3
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:26:15) 
-- CODE:
(50//3)
50%3
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 17:24:47) 
-- CODE:
(50//3)
50%3
-- ERROR:
File "XXXX", line 1
    50//3(=21)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 17:26:09) 
-- CODE:
print(50%3)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 17:26:24) 
-- CODE:
print(50//3)
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 17:26:47) 
-- CODE:
print(50//3)
print(50%3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 17:26:48) 
-- CODE:
print(50//3)
print(50%3)
-- EXECUTION TIME:
0.122303
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 17:27:54) 
-- CODE:
rint(50//3)
print(50%3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    rint(50//3)
NameError: name 'rint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 17:27:55) 
-- CODE:
rint(50//3)
print(50%3)
-- EXECUTION TIME:
0.164834
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1331/main.py", line 1, in <module>
    rint(50//3)
NameError: name 'rint' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 17:28:02) 
-- CODE:
print(50//3)
print(50%3)
-- EXECUTION TIME:
0.18319
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 17:29:37) 
-- CODE:
print(50//3)
print(50%3)
-- EXECUTION TIME:
0.149656
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
